wasm/fasta_from_seq_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_ewqznpke/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/c3811a452503606bde74c09391d78aa4da8c39c1.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/c3811a452503606bde74c09391d78aa4da8c39c1.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/7eb52cbeb4a07c76e49c08e51a8bc41c5c100f60.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/7eb52cbeb4a07c76e49c08e51a8bc41c5c100f60.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/4d6ea00276010538d18e0519952ec5e2e86ddcc3.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/4d6ea00276010538d18e0519952ec5e2e86ddcc3.json" for subsequent builds)
cache:INFO:  - ok
